--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline{
     stages{
         stage("Build"){
             steps{
-                echo "Buildung"
+                echo "Die BUildID lautet: ${BUILD_ID} jobname ist: ${JON_NAME} build mit der nummer ${BUILD_NUMMER}"
                 bat "mvn package"
                 bat '''
                 cd target
