--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,9 +3,15 @@ pipeline{
    
 
     stages{
-       
+        stage('Build') {
+            steps {
+                echo 'Building..'
+            }
+        }
+        /* 
         stage("Build"){
             steps{
+
                 echo "Die BUildID lautet: ${BUILD_ID} jobname ist: ${JON_NAME} build mit der nummer ${BUILD_NUMMER}"
                 bat "mvn package"
                 bat '''
@@ -14,6 +20,7 @@ pipeline{
                 '''
             }
     }
+     */
    
 }
 }
