--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,20 +8,19 @@ pipeline{
                 echo "Hallo World"
             }
         }
-        /* 
-        stage("Build"){
-            steps{
-
-                echo "Die BUildID lautet: ${BUILD_ID} jobname ist: ${JON_NAME} build mit der nummer ${BUILD_NUMMER}"
-                bat "mvn package"
-                bat '''
+          stage('Hello') {
+            steps {
+                echo " Die BuildID lautet: '$BUILD_ID'  Jobname ist: '$JOB_NAME'  Build mit der Nummer '$BUILD_NUMBER' wird gebaut "
+                sh '''
+                mvn package
                 cd target
-                dir
+                ls
                 '''
             }
-    }
-     */
+        }
+       
+     
    
 }
 }
-//echo "Hallo world"
+
