--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,13 +1,14 @@
 pipeline{
-    agent any
-   
-
+    agent {
+        dockerfile true
+    }
     stages{
         stage('Build') {
             steps {
                 echo "Hallo World"
             }
         }
+        /* 
         stage('Hello') {
             steps {
                 echo " Die BuildID lautet: '$BUILD_ID'  Jobname ist: '$JOB_NAME'  Build mit der Nummer '$BUILD_NUMBER' wird gebaut "
@@ -20,7 +21,7 @@ pipeline{
             }
         }
        
-     
+     */
    
 }
 }
