--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,24 @@
-
+pipeline {
+    agent any 
+    stages {
+        stage('Build') { 
+            steps {
+                // 
+            }
+        }
+        stage('Test') { 
+            steps {
+                // 
+            }
+        }
+        stage('Deploy') { 
+            steps {
+                // 
+            }
+        }
+    }
+}
+/* 
 pipeline{
     agent any
     stages{
@@ -10,4 +30,4 @@ pipeline{
        
      }}
 
-
+*/
