--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,3 +1,4 @@
+/*
 pipeline {
     agent any 
     stages {
@@ -18,7 +19,8 @@ pipeline {
         }
     }
 }
-/* 
+ */
+
 pipeline{
     agent any
     stages{
@@ -27,7 +29,16 @@ pipeline{
                 echo "Hallo World"
             }
         }
+        stage('Hello') {
+            steps {
+                echo " Die BuildID lautet: '$BUILD_ID'  Jobname ist: '$JOB_NAME'  Build mit der Nummer '$BUILD_NUMBER' wird gebaut "
+                sh '''
+                mvn package
+                cd target
+                ls
+                '''
+            }
+        }
        
      }}
 
-*/
