--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,3 +1,13 @@
+pipeline {
+    agent { docker { image 'maven:3.8.6-openjdk-11-slim' } }
+    stages {
+        stage('build') {
+            steps {
+                sh 'mvn --version'
+            }
+        }
+    }
+}
 /*
 pipeline {
     agent any 
@@ -19,7 +29,7 @@ pipeline {
         }
     }
 }
- */
+ 
 
 pipeline{
     agent any
@@ -37,8 +47,13 @@ pipeline{
                 cd target
                 ls
                 '''
+             
+                
+                
             }
         }
        
      }}
+
+      */
 
