--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,31 @@
+pipeline {
+    agent {
+        docker { image 'maven:3.8.6-openjdk-18' }
+        }    
 
 
+    stages {
+
+        stage('Build') {
+  
+        
+            steps {
+                sh 'mvn package '
+                  
+            }
+        }
+
+        stage('Test') {
+           
+            steps {
+                sh 'mvn test'
+                  
+            }
+        }
+ 
+    }
+}
+/* 
 pipeline {
     agent any 
     stages {
@@ -21,7 +47,7 @@ pipeline {
     }
 }
  
-/* 
+ 
 pipeline{
     agent any
     stages{
