--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,7 @@
 pipeline {
     agent {
-        docker { image 'maven:3.8.6-openjdk-18' }
+        docker { 
+            image 'maven:3.8.6-openjdk-18' }
         }    
     stages {
         stage('Build') {
